clusters/homelab/apps/n8n/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: n8n-allow-istio-gateway
  namespace: automation
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: n8n
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway
              - cluster.local/ns/traefik/sa/traefik
              - cluster.local/ns/octelium-client/sa/octelium-client
              - cluster.local/ns/automation/sa/n8n
